# wheather-station-dht22

./: docker-compose.yml  pyproject.toml
wheather_station/: dht_main.py  wheather.py
