[tool.poetry]
name = "weather_station"
version = "0.1.0"
description = "weather station dht11 in real time from raspberry pi"
authors = ["nieweglp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-dht = "^4.0.4"
rpi-gpio = "^0.7.1"
influxdb-client = "^1.42.0"
influxdb = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
